--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <h1>Dhiren Kumar Das</h1>
+    <h1 class="text1"> Dhiren</h1>
+    <h1 class="text2">Kumar</h1>
+    <h1 class="text3">Das</h1>
 </body>
 
 </html>
